--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <img src="C:/Users/wikko/Desktop/strona/server-gateways-main/assets/logo.png" alt="FiveM Logo" class="nav-logo">
+                <img src="assets/logo.png" alt="FiveM Logo" class="nav-logo">
                 <span class="nav-title">DoseRP</span>
             </div>
             <div class="nav-menu" id="nav-menu">
